--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   trackcombot:
-    image: ghcr.io/relitrix/commrad:latest
+    image: ghcr.io/relitrix-archive/commrad:latest
     restart: always
     env_file:
       - .env.production
